Fixed the Sidebar from sinking to far into the header on smaller screens

--- a/client/src/scss/media_queries.scss
+++ b/client/src/scss/media_queries.scss
@@ -232,7 +232,7 @@
 		padding: 0px !important;
 	}
 	.sidebar {
-		top: 100px !important;
+		top: 120px !important;
 	}
 	.profile_orders_container {
 		margin: 0;
@@ -296,7 +296,7 @@
 		width: 60px !important;
 	}
 	.sidebar {
-		top: 92px !important;
+		top: 110px !important;
 	}
 	.main_container {
 		padding: 0px !important;
@@ -436,7 +436,7 @@
 		padding: 10px;
 	}
 	.sidebar {
-		top: 90px !important;
+		top: 100px !important;
 	}
 	.product_title_top {
 		font-size: 3rem !important;
